<resources>
    <string name="app_name">The Cheezery</string>
    <string name="welcome_text">Welcome to The Cheezery!</string>
    <string name="welcome_description">Home of the most wonderful desserts ever seen (and tasted) by the human being.</string>
    <string name="button_start">Get started!</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I\'ve read and accepted terms and conditions of The Cheezery</string>
    <string name="sing_in">Sign in</string>
    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>

</resources>