<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_gray"
    tools:context=".MainActivity">

    <ImageView android:id="@+id/imageView_mainTitle"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:scaleType="fitXY"
        android:src="@drawable/thecheezery" />

    <TextView android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dusty_white"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        />

    <TextView android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="@color/dusty_white"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:padding="15dp"
        />

    <Button android:id="@+id/button_getStarted"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:text="@string/button_start"
        android:backgroundTint="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
